# tanks

./: .gitignore  CMakeLists.txt  main.cpp  output.txt
API/: client.hpp  server.hpp
assets/map/: map
assets/texture_packs/tank1/: render_info
client/: CMakeLists.txt
client/inc/: SDLRAII.hpp  SDL_utility.hpp  client.hpp  client_network.hpp  client_world.hpp  err_proc.hpp  graphics.hpp  vec2.hpp
npc/: CMakeLists.txt
npc/inc/: script1.hpp  script2.hpp  script3.hpp
npc/src/: script1.cpp  script2.cpp  script3.cpp
server/: CMakeLists.txt  main.cpp
server/inc/: map.hpp  server.hpp
server_api/: api.hpp
